# fish-finder

./: .gitignore  CLAUDE.md  REFERENCES.md  pyproject.toml
data/: ports.json  reports_seed.csv  species.json  species_profiles.json  stations_coops.json  stations_ndbc.json  zones.geojson
docs/: HANDOFF.md
src/fishfinder/: __init__.py  backfill.py  catchlog.py  config.py  dataset.py  db.py  evaluate.py  geo.py  model.py  recommend.py  schema.sql  scorer.py  scoring.py  seed.py  server.py  train.py
src/fishfinder/ingest/: __init__.py  astro.py  derive.py  http.py  run.py
src/fishfinder/ingest/sources/: __init__.py  co_ops.py  coastwatch.py  ndbc.py  open_meteo.py
tests/: test_astro_derive.py  test_backfill.py  test_catchlog.py  test_dataset.py  test_evaluate.py  test_geo.py  test_ingest_run.py  test_model.py  test_recommend.py  test_schema.py  test_scorer.py  test_scoring.py  test_seed.py  test_server.py  test_sources.py
web/: index.html
