[project]
name = "fishfinder"
version = "0.1.0"
description = "Offshore fishing recommendation engine — $0, local-first, cold-start-first"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# HTTP layer only; the scorer/pipeline stay zero-dep and Cloudflare-portable.
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fishfinder"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
